fix odd outline in replay button, and center align
https://anki.tenderapp.com/discussions/beta-testing/1708-anki-2120-beta#comment_48079637

--- a/qt/ts/scss/reviewer.scss
+++ b/qt/ts/scss/reviewer.scss
@@ -59,6 +59,9 @@ img {
 
 .replay-button {
     text-decoration: none;
+    display: inline-flex;
+    vertical-align: middle;
+    margin: 3px;
 
     svg {
         width: 40px;
